Updated get_player
